--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 PRIVACY POLICY MODEL FOR MADNESS
 
 
-This privacy policy governs your use of the software application App Name (“Madnesd”) for mobile devices that was created by Developer Sarath. The Application is Basic description of the app (features, functionality and content) 
+This privacy policy governs your use of the software application App Name (“Madness”) for mobile devices that was created by Developer SarathEXP. The Application is Basic description of the app (features, functionality and content) 
 
  
 What information does the Application obtain and how is it used?
